changes in blogs clientlibs, contentfragments, experiencefragments

--- a/blogs/Clientlibs.html
+++ b/blogs/Clientlibs.html
@@ -90,13 +90,13 @@
                     In  order to create a clientlib, simply right click, create, in type select cq:ClientLibraryfolder and provide name.
                 </p>
                 <div class="image-container">
-                    <image class="center" style="width: 50%;" src="../images/clientlibs/creation_One.webp"/>
+                    <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/creation_One.webp"/>
                 </div>
                 <p>
                     Here in clientlibs, you can segregate css and js files, hence you need to create css folder, js folder, css.txt file and js.txt file.
                 </p>
                 <div class="image-container">
-                    <image class="center" style="width: 50%;" src="../images/clientlibs/folders.webp"/>
+                    <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/folders.webp"/>
                 </div>
                 
                 <h3 style="text-align: left; margin: 0px 0">Properties in Clientlibs</h3>
@@ -128,27 +128,27 @@
                             In democlientlibs, we have created hey.css and hi.css within css folder and hey.js and hi.js in js folder. In base file, we actually add the entries of the js as well as css files that will load along with the clientlibs and also these files load as per the sequence added.
                         </p>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/clientlibs/heycss.webp
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/heycss.webp
                             "/>
                         </div>
                         <br>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/clientlibs/hicss.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/hicss.webp"/>
                         </div>
                         <br>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/clientlibs/demobase.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/demobase.webp"/>
                         </div>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/clientlibs/heyjs.webp"/>
-                        </div>
-                        <br>
-                        <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/clientlibs/hijswithoutdependency.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/heyjs.webp"/>
                         </div>
                         <br>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/clientlibs/hijswithoutdependency.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/hijswithoutdependency.webp"/>
+                        </div>
+                        <br>
+                        <div class="image-container">
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/hijswithoutdependency.webp"/>
                         </div>
                     </li>
                     <li>
@@ -181,7 +181,7 @@
                             Now let us understand dependency. Let us create a glbal level clientlibs named helloclientlibs, under the clientlibs folder of local-project.
                         </p>  
                         <div class="image-container">
-                            <image class="center" style="width: 25%;" src="../images/clientlibs/helloclientlibs.webp"/>
+                            <image class="center smallscreenfull" style="width: 25%;" src="../images/clientlibs/helloclientlibs.webp"/>
                         </div>  
                         <br/>
                         <div class="image-container">
@@ -189,11 +189,11 @@
                         </div>
                         <br/> 
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/clientlibs/hellocss.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/hellocss.webp"/>
                         </div>
                         <br/>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/clientlibs/hellojs.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/clientlibs/hellojs.webp"/>
                         </div>
                     </li>
                     <li>
