--- a/blogs/ContentFragments.html
+++ b/blogs/ContentFragments.html
@@ -169,7 +169,7 @@
                           Having added the cloud configurations, simply create the content fragment using the model and add the respective data.  
                         </p>
                         <div class="image-container">
-                            <image class="center" style="width: 30%;" src="../images/cf/createcf1.webp"/>
+                            <image class="center smallscreenfull" style="width: 30%;" src="../images/cf/createcf1.webp"/>
                         </div>
                         <br/>
                         <div class="image-container">
