--- a/blogs/ExperienceFragment.html
+++ b/blogs/ExperienceFragment.html
@@ -90,7 +90,7 @@
                             <image class="center" style="width: 100%;" src="../images/xf/experiencefrag.webp"/>
                         </div>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/xf/create-folder.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/xf/create-folder.webp"/>
                         </div>
                     </li>
                     <li>
@@ -98,7 +98,7 @@
                             Now create an experience fragment. We need to select a template and for the purpose we are using web variation.
                         </p>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/xf/createef.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/xf/createef.webp"/>
                         </div>
                         <br />
                         <div class="image-container">
@@ -110,15 +110,15 @@
                             Go to edit template, add the demo component to the policies and now add the component to the container. This is how you have succcessfully created your experience fragment. Author it and see the result on the page. For the purpose we are displaying the text and path fields only via properties.
                         </p>
                         <div class="image-container">
-                            <image class="center" style="width: 25%;" src="../images/xf/creation-of-ex2.webp"/>
+                            <image class="center smallscreenfull" style="width: 25%;" src="../images/xf/creation-of-ex2.webp"/>
                         </div>
                         <br />
                         <div class="image-container">
-                            <image class="center" style="width: 25%;" src="../images/xf/creation-of-ex4.webp"/>
+                            <image class="center smallscreenfull" style="width: 25%;" src="../images/xf/creation-of-ex4.webp"/>
                         </div>
                         <br/>
                         <div class="image-container">
-                            <image class="center" style="width: 50%;" src="../images/xf/creation-of-ex5.webp"/>
+                            <image class="center smallscreenfull" style="width: 50%;" src="../images/xf/creation-of-ex5.webp"/>
                         </div>
                         <br/>
                         <div class="image-container">
@@ -143,7 +143,7 @@
                         </div>
                         <br/>
                         <div class="image-container">
-                            <image class="center" style="width: 25%;" src="../images/xf/creation-of-ex10.webp"/>
+                            <image class="center smallscreenfull" style="width: 25%;" src="../images/xf/creation-of-ex10.webp"/>
                         </div>
                         <br/>
                         <div class="image-container">
