Minor style changes in blogs

--- a/blogs/Servlets.html
+++ b/blogs/Servlets.html
@@ -98,7 +98,7 @@
                         <p>In order to register a servlet by path, you need to add the following snippet to it. Remember the path must begin with /bin.</p>
                         <div>
                             <pre style="width: 100%; height:100%">
-                                <code class="center code-flow" style="width: 80%; height:100%">
+                                <code class="center code-flow">
                                     @Component(
                                             service = Servlet.class,
                                             property = {
@@ -118,7 +118,7 @@
                         <p>Here we have created a servlet that reads the metadata properties of an asset.</p>
                         <div>
                             <pre style="width: 100%; height:100%">
-                                <code class="center code-flow" style="width: 80%; height:100%">
+                                <code class="center code-flow">
                                     package com.local.core.servlets;
 
                                     import org.apache.sling.api.SlingHttpServletRequest;
@@ -197,7 +197,7 @@
                         <p>You need to add the following snippet to your servlet. The same functionality we will achieve by registering the servlet by resource type.</p>
                         <div>
                             <pre style="width: 100%; height:100%">
-                                <code class="center code-flow" style="width: 80%; height:100%">
+                                <code class="center code-flow">
                                     @Component(
                                                 service = Servlet.class
                                         )
@@ -214,7 +214,7 @@
 
                         <div>
                             <pre style="width: 100%; height:100%">
-                                <code class="center code-flow" style="width: 80%; height:100%">
+                                <code class="center code-flow">
                                     package com.local.core.servlets;
 
                                     import org.apache.sling.api.SlingHttpServletRequest;
