changes in contentasaservice blog

--- a/blogs/contentasaservice.html
+++ b/blogs/contentasaservice.html
@@ -69,7 +69,7 @@
                 <p>Hi, hope you are doing well. Welcome to another blog.</p>
                 <h3 style="text-align: left; margin: 0px 0">Content as a Service in AEM</h3>
                 <p>
-                    Content as a Service in AEM is a powerful feature of AEM that circulates content in structured format like JSON instead of serving it as mere webpages thus aiding in its usage across multiple platforms including mobile apps, IoT devices. This content can be consumed by various other websites, applications, and devices.                 
+                    Content as a Service in AEM is a powerful feature of AEM that circulates content in structured format like JSON instead of serving it as mear webpages thus aiding in its usage across multiple platforms including mobile apps, IoT devices. This content can be consumed by various other websites, applications, and devices.                 
                 </p>
                 <h3 style="text-align: left; margin: 0px 0">Features of Content as a Service in AEM</h3>
 
@@ -91,13 +91,13 @@
                     </li>
                     <li>
                         <p>
-                            <b>Content Fragments</b> in AEM are like neatly organized content blocks that you can create once and reuse across multiple platforms. They help structure content in a way that’s flexible, consistent, and API-friendly, making them perfect for headless content delivery. Once created, these fragments can be referenced anywhere within AEM pages, or they can be delivered directly to websites, mobile apps, or other digital platforms through APIs. For more details on contner fragments, refer <a href="https://infodales.com/blogs/ContentFragments.html">our blog on content fragments</a>.
+                            <b>Content Fragments</b> in AEM are like neatly organized content blocks that you can create once and reuse across multiple platforms. They help structure content in a way that’s flexible, consistent, and API-friendly, making them perfect for headless content delivery. Once created, these fragments can be referenced anywhere within AEM pages, or they can be delivered directly to websites, mobile apps, or other digital platforms through APIs. For more details on content fragments, refer <a href="https://infodales.com/blogs/ContentFragments.html">our blog on content fragments</a>.
                         </p>
                         
                     </li>
                     <li>
                         <p>
-                            <b>GraphQL & REST APIs</b> : If you're familiar with GraphQL, you'll love AEM’s implementation. Instead of making multiple requests to retrieve different pieces of content, GraphQL lets you ask for exactly what you need in a single request. This makes content delivery faster and more efficient, reducing unnecessary data transfers. It’s perfect for structured content like product catalogs, blogs, FAQs, and content fragments, where you only want specific fields rather than an entire data set. You can for more details refer our <a href="https://infodales.com/blogs/aem-graphql.html">Graphql</a> blog where the content fragments is actualy exported using GraphQL
+                            <b>GraphQL & REST APIs</b> : If you're familiar with GraphQL, you'll love AEM’s implementation. Instead of making multiple requests to retrieve different pieces of content, GraphQL lets you ask for exactly what you need in a single request. This makes content delivery faster and more efficient, reducing unnecessary data transfers. It’s perfect for structured content like product catalogs, blogs, FAQs, and content fragments, where you only want specific fields rather than an entire data set. For more details refer our <a href="https://infodales.com/blogs/aem-graphql.html">Graphql</a> blog where the content fragments are actualy exported using GraphQL
                         </p>
                         <p>
                             AEM content Services also supports REST APIs, provides a flexible way to fetch content in JSON format. It follows a more traditional API structure, where each request retrieves predefined content endpoints. This is useful when you need to integrate AEM with other systems or when working with applications that rely on RESTful architecture.
@@ -115,7 +115,7 @@
                 <ul class="ff_ul">
                     <li>
                         <p>
-                            Navigate to tools and then to assets and then to content fragments. Here you can see a few folders. Go to your project folder, here we have and then create a content Fragment model.  
+                            Navigate to tools and then to assets and then to content fragments. Here you can see a few folders. Go to your project folder and then create a content Fragment model.  
                         </p>
                         <div class="image-container">
                             <image class="center smallscreenfull" style="width: 100%;" src="../images/contentasaservice/cfmodel.webp"/>
