--- a/blogs.html
+++ b/blogs.html
@@ -380,6 +380,60 @@
 					</div>
 				</div>
 			</a>
+			<a href="./blogs/event-handler-and-listener.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image"
+						style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;"
+								title="Event Handler and Event Listener in AEM">
+								Event Handler and Event Listener in AEM</p>
+						</div>
+						<p class="publishDate">November 28, 2024</p>
+					</div>
+				</div>
+			</a>
+			<a href="./blogs/sitemap.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image"
+						style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;"
+								title="SiteMap Implementation in AEM">
+								SiteMap Implementation in AEM</p>
+						</div>
+						<p class="publishDate">December 12, 2024</p>
+					</div>
+				</div>
+			</a>
+			<a href="./blogs/slingjobs.html" style="text-decoration: none;" class="blog-item">
+				<div id="sites" class="blog-item-div"
+					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+					<img src="images/Tile Sites.jpg" alt="Card Image"
+						style="width: 100%; height: auto; display: block;">
+					<div style="padding: 16px;">
+						<p class="sitesTag"
+							style="margin-top: 7px; margin-bottom: 7px; font-size: 13px; border-radius: 20px; width: fit-content; padding: 3px 15px;">
+							AEM Sites</p>
+						<div class="one-line">
+							<p class="blog-title" style="font-size: 1em; color: #555;"
+								title="Schedule Sling Jobs In AEM">
+								Schedule Sling Jobs In AEM</p>
+						</div>
+						<p class="publishDate">December 28, 2024</p>
+					</div>
+				</div>
+			</a>
 			<a href="./blogs/ContentFragments.html" style="text-decoration: none;" class="blog-item">
 				<div id="sites" class="blog-item-div"
 					style="border: 1px solid #ccc; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
