--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 
 	<!-- Contact Us -->
 	<section class="location">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14880.16963548435!2d79.0723297!3d21.1904742!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2923b255aa955cf3%3A0xd8c371d12fa585d2!2sInfoDales%20Tech%20Solutions!5e0!3m2!1sen!2sin!4v1677931975509!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d783.5282642637036!2d79.07011365873801!3d21.197524545515506!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c1715308c339%3A0xe5bb159f5d5db71b!2sEros%20Cooperative%20Housing%20Society%2C%2092%2C%20Geeta%20Nagar%2C%20Mata%20Nagar%2C%20Zingabai%20Takli%2C%20Nagpur%2C%20Maharashtra%20440030!5e0!3m2!1sen!2sin!4v1755605664629!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>	
 	</section>
 
 
@@ -57,14 +57,14 @@
 				<div>
 					<i class="fa fa-home"></i>
 					<span>
-						<h5>64, Doye layout, Geeta nagar</h5>
-						<p>Godhani road, Zingabai takli, Nagpur-440030</p>
+						<h5>93, Eross Society, Shri Krushna Nagar</h5>
+						<p>Behind Vidarbha Furniture, Nagpur-440030</p>
 					</span>
 				</div>
 				<div>
 					<i class="fa fa-phone"></i>
 					<span>
-						<h5>+91 7770018820</h5>
+						<h5>+91 8087474953</h5>
 						<p>Monday to Saturday </p>
 					</span>
 				</div>
